<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="com.example.glauber.avt_06.tela.Tela1_MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margBot"
        android:gravity="center"
        android:text="@string/lista_de_estudantes"
        android:textSize="@dimen/textitle"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lv_estudantes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margTop" />

    <Button
        android:id="@+id/btn_tela_inserir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/btn_inserir" />

    <Button
        android:id="@+id/btn_tela_deletar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/btn_remover" />

</FrameLayout>
